--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ a:hover {
   text-decoration: underline;
 }
 h2 {
-  @apply text-3xl md:text-4xl text-center text-gray-800 font-semibold
+  @apply text-2xl md:text-3xl text-center text-gray-800 font-semibold
 }
 img {
   width: 100%;
@@ -22,7 +22,13 @@ img {
 }
 
 .nav-link {
-  @apply   text-stone-600 hover:text-zinc-700 font-semibold px-4 capitalize;
+  @apply   text-stone-600 hover:text-zinc-700 font-semibold px-8 capitalize;
+}
+
+
+
+.mobile-nav-link {
+  @apply   text-stone-100 hover:text-zinc-300 font-semibold px-4 capitalize;
 }
 
 .hero-section {
@@ -34,17 +40,30 @@ img {
   border-top-left-radius: 70px;
 }
 
+@media (min-width: 1200px) {
+  .hero-image {
+    width: 100%;
+    @apply h-full;
+  }
+}
+
 .trade-mark-section {
   background-image: linear-gradient(to right, #fffffc, #ffefe8);
+
 
 }
 
 .trade-mark-card {
-  @apply flex items-center justify-center  bg-white shadow-md  hover:shadow-sm border px-6 py-2 rounded-xl
+  @apply flex items-center justify-center  bg-white shadow-md  hover:shadow-sm border px-6 py-2 m-4 rounded-xl
 }
 
 .testimony-image {
   @apply w-20 h-20;
 
   border-radius: 50%;
+}
+
+.blog-section {
+  background-image: linear-gradient(to bottom, #fffffc, #f2eeee);
+
 }
